[package]
name = "dfplot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
banyc_polars_util = { git = "https://github.com/Banyc/banyc_polars_util.git", tag = "v0.0.2" }
clap = { version = "4", features = ["derive"] }
itertools = "0.13"
math = { git = "https://github.com/Banyc/math.git", tag = "v0.0.7" }
plotly = "0.8"
polars = { version = "0.40", features = [
    "abs",
    "lazy",
    "regex",
    "log",
    "strings",
] }
strict-num = "0.2"
