[package]
name = "dfplot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
banyc_polars_util = "0.5"
clap = { version = "4", features = ["derive"] }
itertools = "0.13"
math = { git = "https://github.com/Banyc/math.git", tag = "v0.0.21" }
plotly = "0.10"
polars = { version = "0.44", features = [
    "abs",
    "lazy",
    "regex",
    "log",
    "strings",
] }
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.53" }
